<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>software.shonk</groupId>
  <artifactId>ffm-java-side</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - ffm-java-side</name>
  <url>http://maven.apache.org</url>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>24</source>
          <target>24</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>software.shonk.seminar.hermes.RustFFMSorter</mainClass>
          <arguments></arguments>
          <systemProperties>
            <systemProperty>
              <key>java.library.path</key>
              <value>${project.basedir}/target/native</value> <!-- Adjust if needed -->
            </systemProperty>
          </systemProperties>
          <environmentVariables>
            <JAVA_TOOL_OPTIONS>--enable-native-access=ALL-UNNAMED</JAVA_TOOL_OPTIONS>
          </environmentVariables>
          <commandlineArgs></commandlineArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
